2009-04-13  Francisco Tolmasky  <francisco@280north.com>

        Reviewed by Oliver Hunt.
        
        BUG 25171: It should be possible to manually set the name of an anonymous function
        <https://bugs.webkit.org/show_bug.cgi?id=25171>

        This change adds the displayName property to functions, which when set overrides the 
        normal name when appearing in the console.

        * profiler/Profiler.cpp:
        (JSC::createCallIdentifierFromFunctionImp): Changed call to InternalFunction::name to InternalFunction::calculatedDisplayName
        * runtime/CommonIdentifiers.h: Added displayName common identifier.
        * runtime/InternalFunction.cpp:
        (JSC::InternalFunction::displayName): Access to user settable displayName property
        (JSC::InternalFunction::calculatedDisplayName): Returns displayName if it exists, if not then the natural name

2009-04-13  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Sam Weinig.

        Disabled another JavaScriptCore test because it fails on Windows but
        not Mac, so it makes the bots red.

        * tests/mozilla/expected.html:

2009-04-13  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Sam Weinig.
        
        Disabled two JavaScriptCore tests because they fail on Window or Mac but
        not both, so they make the bots red.

        * tests/mozilla/expected.html: Updated expected results.

2009-04-09  Ben Murdoch  <benm@google.com>

        Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=25091
        The Android platform requires threads to be registered with the VM.
        This patch implements this behaviour inside ThreadingPthreads.cpp.

        * wtf/ThreadingPthreads.cpp: Add a level above threadEntryPoint that takes care of (un)registering threads with the VM.
        (WTF::runThreadWithRegistration): register the thread and run entryPoint. Unregister the thread afterwards.